# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = ["./ext/min_max"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"