[package]
name = "min_max"
version = "0.1.0"
edition = "2021"
authors = ["Wouter Coppieters <wc@pico.net.nz>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.1"}
min-max-heap = "1.3.0"
lazy_static = "1.4.0"
rb-sys = { version = "0.9.89", features=["stable-api-compiled-fallback"]}
